--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi pagina web</title>
 </head>
 <body>
-    
+    <h1>Sergio Luis Rodriguez Alvarez</h1>
+    <h2>Semestre: Quinto</h2>
 </body>
 </html>
