--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Sergio Luis Rodriguez Alvarez</h1>
     <h2>Semestre: Quinto</h2>
+    <br> <br>
+    <h3>Deporte favorito: Futbol</h3>
 </body>
 </html>
