--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Semestre: Quinto</h2>
     <br> <br>
     <h3>Deporte favorito: Futbol</h3>
+    <h4>Equipos del deporte: Real Madrid, Liverpool</h4>
 </body>
 </html>
