--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h5>Real Madrid: El Real Madrid Club de Fútbol es un club polideportivo de la ciudad de Madrid, España. Fundado el 6 de marzo de 1902 como Sociedad Madrid Foot-Ball Club, en su rama futbolística - que juega en la Primera División de España - fue denominado por la FIFA el Mejor Club del Siglo XX.</h5>
     <h6>jugadores: t. courtis, dani carvajal, eder militao, d. alaba, nacho, bellingham, T. kroos, L. modric, F. valverde, vinicius junior, rodrygo, joselu</h6>
     <br> <br>
-    
+    <h7>Liverpool: El Liverpool F. C. es uno de los clubes exitosos de Inglaterra y del mundo, respaldado con sus 19 títulos de liga, 8 FA Cups, 15 Community Shield, 8 Copas de la Liga, 1 Supercopa de la Liga, 6 Copas de Europa, 3 Copas de la UEFA y 4 Supercopas de la UEFA.</h7>
+    <h8>jugadores: Alisson Becker, Virgil van Dijk, Joe Gomez, Andy Robertson, Trent Alexander Arnold, Thiago Alcântara, Alexis Mac Allister, Curtis Jones, Harvey Elliott, Mohamed Salah, Darwin Núñez, Luis Díaz</h8>
 </body>
 </html>
